[package]
name = "yu-ri"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
httpdate = "1"
tokio-cron-scheduler = "0.15"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = true
