[package]
name = "yu-ri"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["http1", "http2", "webpki-tokio"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
blake3 = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

httpdate = "1"
tokio-cron-scheduler = "0.15"
tokio-stream = "0.1.18"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = true
overflow-checks = true
